gatekeeper/templates/k8spsprootuser.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdenyroot
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
    description: "Cấm chạy container với user root (UID 0)"
spec:
  crd:
    spec:
      names:
        kind: K8sDenyRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenyroot

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.runAsUser == 0
          msg := sprintf("Container '%s' không được phép chạy với root user (runAsUser: 0)", [container.name])
        }

        violation[{"msg": msg}] {
          input.review.object.spec.securityContext.runAsUser == 0
          container := input.review.object.spec.containers[_]
          not container.securityContext.runAsUser
          msg := sprintf("Pod chạy với root user (runAsUser: 0) ở spec.securityContext và container '%s' không override", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.initContainers[_]
          container.securityContext.runAsUser == 0
          msg := sprintf("InitContainer '%s' không được phép chạy với root user (runAsUser: 0)", [container.name])
        }
