gatekeeper/templates/k8srequiredlimits.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequirelimits
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
    description: "Bắt buộc containers phải có resources.limits"
spec:
  crd:
    spec:
      names:
        kind: K8sRequireLimits
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirelimits

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.resources.limits
          msg := sprintf("Container '%s' phải khai báo resources.limits", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.resources.limits
          not container.resources.limits.memory
          msg := sprintf("Container '%s' phải khai báo resources.limits.memory", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.resources.limits
          not container.resources.limits.cpu
          msg := sprintf("Container '%s' phải khai báo resources.limits.cpu", [container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.initContainers[_]
          not container.resources.limits
          msg := sprintf("InitContainer '%s' phải khai báo resources.limits", [container.name])
        }
