gatekeeper/templates/requireownertemplate.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata: 
  name: requireownerlabel
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
spec:
  crd:
    spec:
      names:
        kind: RequireOwnerLabel
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package requireownerlabel

        violation[{"msg": msg}] {
          not input.review.object.metadata.labels.owner
          msg := sprintf(
            "resource %s/%s phải có label owner",
            [
              input.review.object.kind,
              input.review.object.metadata.name
            ]
          )
        }
